@@ -5,6 +5,8 @@
 	* src/treeutils.[ch]: Initial commit of an AVL tree implementation
 	* src/listutils.[ch]: Initial commit of a double linked list
 		abstraction
+	* src/ipcutils.[ch]: Initial commit of a small IPC abstraction by
+		Christian Seiler
 
 2010-07-15 Christian Kruse <cjk@wwwtech.de>
 	* src/utils.[ch]: Initial commit of a basic utility library
